@@ -47,11 +47,9 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
-    jvmArgs("--enable-preview")
 }
 
 tasks.withType<JavaCompile> {
-    options.compilerArgs.add("--enable-preview")
     options.errorprone {
         disableWarningsInGeneratedCode.set(true)
         disable("MissingSummary", "BadImport")
